objects/et4ae5__IndividualEmailResult__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__CampaignMemberId__c</fullName>
        <label>Campaign Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Clicked__c</fullName>
        <formula>et4ae5__NumberOfUniqueClicks__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Contact_ID__c</fullName>
        <formula>et4ae5__Contact__r.Id</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>IndividualEmailResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateBounced__c</fullName>
        <inlineHelpText>The date and time when this subscriber&apos;s email address bounced</inlineHelpText>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateOpened__c</fullName>
        <inlineHelpText>The date and time when the subscriber opened the email</inlineHelpText>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateSent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateUnsubscribed__c</fullName>
        <inlineHelpText>The date and time when the subscriber unsubscribed</inlineHelpText>
        <label>Date Unsubscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Email_Asset_ID__c</fullName>
        <label>Email Asset ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Email_ID__c</fullName>
        <label>Email ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Email__c</fullName>
        <formula>IF( !ISBLANK(et4ae5__Contact__r.Email), et4ae5__Contact__r.Email, et4ae5__Lead__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromAddress__c</fullName>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HardBounce__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The email sent to this subscriber  was rejected due to permanent conditions (this typically results when &quot;user unknown&quot; or &quot;domain not found&quot; errors occur)</inlineHelpText>
        <label>Hard Bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Lead_ID__c</fullName>
        <formula>et4ae5__Lead__r.Id</formula>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>IndividualEmailResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__MergeId__c</fullName>
        <externalId>true</externalId>
        <label>Merge Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>et4ae5__NumberOfTotalClicks__c</fullName>
        <inlineHelpText>The total number of times this subscriber clicked on the links on this email</inlineHelpText>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberOfUniqueClicks__c</fullName>
        <inlineHelpText>The unique number of times this subscriber clicked on the links on this email (unique means one click per link)</inlineHelpText>
        <label>Links Clicked</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the subscriber opened the email or not</inlineHelpText>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The unique identifier of the email send. You may be asked to reference this number when calling Marketing Cloud support if the need arises.</inlineHelpText>
        <label>Send Definition</label>
        <referenceTo>et4ae5__SendDefinition__c</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>IndividualEmailResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__SoftBounce__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The email sent was rejected due to a seemingly temporary condition, such as a full inbox, after the system retries unsuccessfully to send the email every 15 minutes for 72 hours. A subscriber will be set to Held status after three soft bounces</inlineHelpText>
        <label>Soft Bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubjectLine__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Tracking_As_Of__c</fullName>
        <defaultValue>now()</defaultValue>
        <inlineHelpText>The date and time the last tracking update was received by Salesforce</inlineHelpText>
        <label>Tracking As Of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__TriggeredSendDefinitionName__c</fullName>
        <formula>et4ae5__TriggeredSendDefinition__r.Name</formula>
        <inlineHelpText>If this email was automatically generated by a Triggered Send, the name of the Triggered Send that generated the email will be displayed here.</inlineHelpText>
        <label>Triggered Send Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__TriggeredSendDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggered Send</label>
        <referenceTo>et4ae5__Automated_Send__c</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>Individual_Email_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Individual Email Result</label>
    <listViews>
        <fullName>et4ae5__All</fullName>
        <columns>NAME</columns>
        <columns>et4ae5__FromName__c</columns>
        <columns>et4ae5__DateSent__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>et4ae5__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>et4ae5__Prevent_Email_and_Triggered_Send_link</fullName>
        <active>true</active>
        <description>An IER by definition can never be linked to both an Email Send and a Triggered Send. An OR relationship must be observed. Furthermore, an IER cannot have both Email Send and Triggered Send be blank.</description>
        <errorConditionFormula>(NOT(ISBLANK(et4ae5__SendDefinition__c)) &amp;&amp; NOT(ISBLANK(et4ae5__TriggeredSendDefinition__c))) || (ISBLANK(et4ae5__SendDefinition__c) &amp;&amp; ISBLANK(et4ae5__TriggeredSendDefinition__c))</errorConditionFormula>
        <errorMessage>An Email Send or Triggered Send Definition (but not both) must be assigned to an Individual Email Result.</errorMessage>
    </validationRules>
</CustomObject>